add commit step

--- a/.github/workflows/run_workflow.yml
+++ b/.github/workflows/run_workflow.yml
@@ -33,3 +33,10 @@ jobs:
       run: pwd
     - name: Run workflow as shell script
       run: bash 'data_prep_scripts/run.sh'
+    - name: git add 
+      run: git add test_merged_20210119.csv
+    - name: git commit to github repo  
+      run: git commit -m "newly updated merged datasets"
+    - name: git push commit
+      run: git push origin master
+      
